Fixed text alignment for episode page titles

--- a/css/styleEpisode.scss
+++ b/css/styleEpisode.scss
@@ -17,6 +17,7 @@
 	width: 700px; }
 
 #content h1 {
+	text-align: left;
 	margin-bottom: 10px; }
 
 #content h2 {
